# soa2usdm

./: .gitignore  README.md  pyproject.toml
documents/: background-and-challenges.md  soa2usdm-schema-architecture.md  soa_table_type_definitions.md
notebooks/: 00_download_extract.ipynb  01_batch.ipynb
prompts/: EXCEL_TO_JSON_PROMPT.md  EXTRACTION_WORKFLOW_GUIDE.md  PDF_TO_EXCEL_PROMPT.md  PDF_TO_JSON_PROMPT.md
schemas/: soa-table-corrections.schema.json  soa-table-extraction.schema.json  soa-table-resolved.schema.json  soa-tables-consolidated.schema.json
soa2usdm/: __init__.py  activity_inventory.py  analytics.py  base.py  config.py  consolidate.py  corrections.py  errors.py  index_generator.py  resolve.py  visualize.py  visualize_resolved.py
tests/: test_pipeline_regression.py
tests/fixtures/protocols/NCT03637764/SoA2USDM/consolidated/: NCT03637764_consolidated.json
tests/fixtures/protocols/NCT03637764/SoA2USDM/extracted/: NCT03637764_Table_01_extraction.json
tests/fixtures/protocols/NCT03637764/SoA2USDM/resolved/: NCT03637764_Table_01_resolved.json
